# Coder-Codex-Gemini

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  config.example.toml  pyproject.toml  setup.ps1  setup.sh
src/ccg_mcp/: config.py
src/ccg_mcp/tools/: coder.py  codex.py  gemini.py
src/glm_codex_mcp/: __init__.py  cli.py  config.py  server.py
src/glm_codex_mcp/tools/: __init__.py  codex.py  glm.py
templates/: ccg-global-prompt.md
